--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -6,6 +6,7 @@
     .nav > li > .dropdown-menu {
         position: static;
         float: none;
+
     }
 
     .nav li.dropdown-submenu > ul.dropdown-menu {
@@ -68,6 +69,12 @@ h4 {
 
   margin-left: 45%;
 }
+
+.noOverFlow{
+    height:100%;
+   /*overflow: auto;*/
+}
+
 .nomargin {
       margin: 0px;
 }
@@ -519,7 +526,7 @@ div.jGrowl-notification{
 }
 
 .hasCategory .item{
-    height: 33px;
+    height: 100%;
     margin-left: 40px;
     background: #FFFFFF;
     cursor: pointer;
@@ -643,6 +650,7 @@ div.jGrowl-notification{
     padding: 0;
     margin: 0;
     margin-top: -4px;
+    margin-bottom: 7px;
 }
 
 .statusitem-content {
@@ -659,7 +667,7 @@ div.jGrowl-notification{
 }
 
 #current {
-    padding: 5px;
+    padding: 12px;
 }
 
 #before{
@@ -672,7 +680,9 @@ div.jGrowl-notification{
 }
 
 #status-content-container {
-    margin-left: 60px;
+    margin-left: 65px;
+    margin-right: 30px;
+    text-align: justify;
 }
 
 .statusitem-img {
