--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -619,6 +619,10 @@ div.jGrowl-notification{
     overflow: auto;
 }
 
+.share-img-fffix{
+    display: inline-block;
+}
+
 .background-image-fffix img {
     display: block;
 }
