--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -70,8 +70,10 @@ h4 {
 
     }
 .quota {
-
-  margin-left: 45%;
+    color: #333333;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+;
 }
 
 .nomargin {
@@ -83,6 +85,18 @@ h4 {
 display: block;
 }
 
+.displayBlock
+{
+    display: block;
+}
+
+.fileItem
+{
+    width: 100%;
+    display: inline-table;
+    border-top: 1px solid #dddddd;
+    padding: 8px;
+}
 
 
 div.jGrowl-notification{
@@ -96,6 +110,10 @@ div.jGrowl-notification{
 
 .little-height{
     height: 10px;
+}
+
+.littleMargeBot{
+    margin-bottom: 10px;
 }
 
 .little-padding-top{
