--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -46,6 +46,12 @@
     margin: 0;
 }
 
+#geolocMapPreview {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
 .alertColor{
     padding: 8px 15px 8px 14px;
     margin-bottom: 20px;
