--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -213,6 +213,12 @@ div.jGrowl-notification{
     background-color: inherit;
 }
 
+.img {
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+}
+
 .img-small {
     width: 25px;
     height: 25px;
@@ -291,7 +297,7 @@ div.jGrowl-notification{
     text-decoration: none;
 }
 
-.profile-card > img {
+.profile-card > .img {
     margin-right: 5px;
 }
 
