rearranged angularjs folder structure

--- a/src/main/webapp/app/components/home/timeline/TimelineView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineView.html
@@ -21,6 +21,7 @@
             <div class="tatams-content-title">
                 <h3>
                     <!-- Need to change title based on current tab -->
+                    <!-- Replace hardcoded text with translatable text -->
                     Timeline
                 </h3>
             </div>
