--- a/src/main/webapp/app/components/home/timeline/TimelineView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineView.html
@@ -67,7 +67,13 @@
 
                                         <small>
                                             <div class="attachments">
-                                                <div></div>
+                                                <div>
+                                                    <span ng-repeat="attachment in tatam.attachments">
+                                                    <a href="/tatami/file/{{ attachment.attachmentId }}/{{ attachment.filename }}" class="btn-link status-action" target="_blank">
+                                                    <i class="glyphicon glyphicon-file"></i> {{ attachment.filename }}
+                                                    </a>
+                                                    </span>
+                                                </div>
                                             </div>
                                             <div id="share">
                                             </div>
