--- a/src/main/webapp/app/components/home/status/StatusView.html
+++ b/src/main/webapp/app/components/home/status/StatusView.html
@@ -1,4 +1,4 @@
-<script type="text/ng-template" id="vStatus.html">
+<script type="text/ng-template" id="StatusView.html">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancel()">&times;</button>
         <h4 class="modal-title"><fmt:message key="tatami.status.update"/></h4>
