--- a/src/main/webapp/app/components/home/timeline/TimelineView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineView.html
@@ -43,7 +43,7 @@
                                             <!-- Make status abbr month and day display after 24h have passed? -->
                                         </div>
                                         <h5 class="statusitem-name">
-                                            <strong><a href="#users/{{ status.username }}">{{status.firstName + " " + status.lastName}}</a></strong>
+                                            <strong><a href="#users/{{ status.username }}">{{status.firstName + ' ' + status.lastName}}</a></strong>
                                             <small><a href="#users/{{ status.username }}">@{{ status.username }}</a></small>
                                         </h5>
                                         <div class="markdown" ng-bind-html="status.content | markdown"></div>
