fixed accidental rename of path

--- a/src/main/webapp/app/components/home/sidebar/SidebarView.html
+++ b/src/main/webapp/app/components/home/sidebar/SidebarView.html
@@ -5,7 +5,7 @@
             <div>
                 <div class="page-header">
                     <h4 class="profile-card background-image-fffix">
-                        <div class="img img-rounded img-medium pull-left" ng-style="{ 'background-image': user.avatar=='' ? 'url(/img/default_image_user.png)' : 'url(/tatami/avatar/' + user.avatar + '/photo.jpg)' }"></div>
+                        <div class="img img-rounded img-medium pull-left" ng-style="{ 'background-image': user.avatar=='' ? 'url(/img/default_image_profile.png)' : 'url(/tatami/avatar/' + user.avatar + '/photo.jpg)' }"></div>
                         <a href="#users/{{ user.username }}">
                         <strong>
                         {{ user.firstName + ' ' + user.lastName }}
